--- a/backup/main.lfm
+++ b/backup/main.lfm
@@ -1,115 +1,152 @@
 object mainForm: TmainForm
   Left = 342
-  Height = 672
+  Height = 711
   Top = 31
-  Width = 635
+  Width = 794
   Caption = '40 grafische algoritmes'
-  ClientHeight = 672
-  ClientWidth = 635
+  ClientHeight = 711
+  ClientWidth = 794
+  DesignTimePPI = 120
   Menu = MainMenu1
   object pnlTop: TPanel
     Left = 0
-    Height = 136
+    Height = 170
     Top = 0
-    Width = 635
+    Width = 794
     Align = alTop
-    ClientHeight = 136
-    ClientWidth = 635
+    ClientHeight = 170
+    ClientWidth = 794
     TabOrder = 0
-    object Memo1: TMemo
-      Left = 408
-      Height = 120
-      Top = 8
-      Width = 216
-      ScrollBars = ssAutoVertical
-      TabOrder = 0
-    end
     object Label1: TLabel
-      Left = 16
-      Height = 22
-      Top = 8
-      Width = 95
+      Left = 20
+      Height = 20
+      Top = 10
+      Width = 92
       Caption = 'Groote figuur:'
       ParentColor = False
       Visible = False
     end
     object SpinEdit1: TSpinEdit
-      Left = 16
-      Height = 31
-      Top = 32
-      Width = 56
+      Left = 20
+      Height = 28
+      Top = 40
+      Width = 70
+      Increment = 10
       MaxValue = 300
+      MinValue = 50
+      OnChange = miDiagNHoekClick
+      TabOrder = 0
+      Value = 50
+      Visible = False
+    end
+    object SpinEdit2: TSpinEdit
+      Left = 20
+      Height = 28
+      Top = 90
+      Width = 70
+      Increment = 10
+      MaxValue = 200
       MinValue = 50
       OnChange = miDiagNHoekClick
       TabOrder = 1
       Value = 50
       Visible = False
     end
-    object SpinEdit2: TSpinEdit
-      Left = 16
-      Height = 31
-      Top = 72
-      Width = 56
-      MaxValue = 200
-      MinValue = 50
-      OnChange = miDiagNHoekClick
-      TabOrder = 2
-      Value = 50
-      Visible = False
-    end
     object SpinEdit3: TSpinEdit
-      Left = 136
-      Height = 31
-      Top = 32
-      Width = 56
+      Left = 170
+      Height = 28
+      Top = 40
+      Width = 70
       MaxValue = 25
       MinValue = 4
       OnChange = miDiagNHoekClick
-      TabOrder = 3
+      TabOrder = 2
       Value = 4
       Visible = False
     end
     object Label2: TLabel
-      Left = 136
-      Height = 22
-      Top = 8
-      Width = 136
+      Left = 170
+      Height = 20
+      Top = 10
+      Width = 128
       Caption = 'Aantal hoekpunten:'
       ParentColor = False
       Visible = False
     end
     object Label3: TLabel
-      Left = 136
-      Height = 22
-      Top = 72
-      Width = 149
+      Left = 170
+      Height = 20
+      Top = 90
+      Width = 141
       Caption = 'Aantal punten boven:'
       ParentColor = False
       Visible = False
     end
     object SpinEdit4: TSpinEdit
-      Left = 296
-      Height = 31
-      Top = 72
-      Width = 56
+      Left = 360
+      Height = 28
+      Top = 88
+      Width = 70
       MaxValue = 16
       MinValue = 8
       OnChange = miDiagWebClick
-      TabOrder = 4
+      TabOrder = 3
       Value = 8
+      Visible = False
+    end
+    object Label4: TLabel
+      Left = 360
+      Height = 20
+      Top = 10
+      Width = 51
+      Caption = '1<k<25'
+      ParentColor = False
+      Visible = False
+    end
+    object SpinEdit5: TSpinEdit
+      Left = 360
+      Height = 28
+      Top = 40
+      Width = 62
+      MaxValue = 25
+      MinValue = 1
+      OnChange = miIngeschrevenClick
+      TabOrder = 4
+      Value = 1
+      Visible = False
+    end
+    object SpinEdit6: TSpinEdit
+      Left = 448
+      Height = 28
+      Top = 39
+      Width = 63
+      MaxValue = 50
+      MinValue = 10
+      OnChange = miIngeschrevenClick
+      TabOrder = 5
+      Value = 10
+      Visible = False
+    end
+    object Label5: TLabel
+      Left = 448
+      Height = 20
+      Top = 10
+      Width = 60
+      Caption = '10<n<50'
+      ParentColor = False
       Visible = False
     end
   end
   object pbMain: TPaintBox
     Left = 0
-    Height = 536
-    Top = 136
-    Width = 635
+    Height = 541
+    Top = 170
+    Width = 794
     Align = alClient
   end
   object MainMenu1: TMainMenu
-    Left = 206
-    Top = 48
+    Left = 258
+    Top = 60
     object MenuItem1: TMenuItem
       Caption = 'Programma 1-10'
       object miDiagWeb: TMenuItem
@@ -131,6 +168,10 @@ object mainForm: TmainForm
       object miDiagNHoek: TMenuItem
         Caption = 'Diagonalen N-hoek'
         OnClick = miDiagNHoekClick
+      end
+      object miIngeschreven: TMenuItem
+        Caption = 'Ingeschreven vierkanten'
+        OnClick = miIngeschrevenClick
       end
     end
   end
