--- a/main.lfm
+++ b/main.lfm
@@ -1,10 +1,10 @@
 object mainForm: TmainForm
   Left = 342
-  Height = 541
+  Height = 711
   Top = 31
   Width = 794
   Caption = '40 grafische algoritmes'
-  ClientHeight = 541
+  ClientHeight = 711
   ClientWidth = 794
   DesignTimePPI = 120
   Menu = MainMenu1
@@ -31,6 +31,7 @@ object mainForm: TmainForm
       Height = 28
       Top = 40
       Width = 70
+      Increment = 10
       MaxValue = 300
       MinValue = 50
       OnChange = miDiagNHoekClick
@@ -43,6 +44,7 @@ object mainForm: TmainForm
       Height = 28
       Top = 90
       Width = 70
+      Increment = 10
       MaxValue = 200
       MinValue = 50
       OnChange = miDiagNHoekClick
@@ -81,9 +83,9 @@ object mainForm: TmainForm
       Visible = False
     end
     object SpinEdit4: TSpinEdit
-      Left = 370
+      Left = 360
       Height = 28
-      Top = 90
+      Top = 88
       Width = 70
       MaxValue = 16
       MinValue = 8
@@ -92,10 +94,52 @@ object mainForm: TmainForm
       Value = 8
       Visible = False
     end
+    object Label4: TLabel
+      Left = 360
+      Height = 20
+      Top = 10
+      Width = 51
+      Caption = '1<k<25'
+      ParentColor = False
+      Visible = False
+    end
+    object SpinEdit5: TSpinEdit
+      Left = 360
+      Height = 28
+      Top = 40
+      Width = 62
+      MaxValue = 25
+      MinValue = 1
+      OnChange = miIngeschrevenClick
+      TabOrder = 4
+      Value = 1
+      Visible = False
+    end
+    object SpinEdit6: TSpinEdit
+      Left = 448
+      Height = 28
+      Top = 39
+      Width = 63
+      MaxValue = 50
+      MinValue = 10
+      OnChange = miIngeschrevenClick
+      TabOrder = 5
+      Value = 10
+      Visible = False
+    end
+    object Label5: TLabel
+      Left = 448
+      Height = 20
+      Top = 10
+      Width = 60
+      Caption = '10<n<50'
+      ParentColor = False
+      Visible = False
+    end
   end
   object pbMain: TPaintBox
     Left = 0
-    Height = 371
+    Height = 541
     Top = 170
     Width = 794
     Align = alClient
@@ -124,6 +168,10 @@ object mainForm: TmainForm
       object miDiagNHoek: TMenuItem
         Caption = 'Diagonalen N-hoek'
         OnClick = miDiagNHoekClick
+      end
+      object miIngeschreven: TMenuItem
+        Caption = 'Ingeschreven vierkanten'
+        OnClick = miIngeschrevenClick
       end
     end
   end
