--- a/backup/main.lfm
+++ b/backup/main.lfm
@@ -1,13 +1,20 @@
 object mainForm: TmainForm
   Left = 342
-  Height = 711
+  Height = 844
   Top = 31
   Width = 794
   Caption = '40 grafische algoritmes'
-  ClientHeight = 711
+  ClientHeight = 844
   ClientWidth = 794
   DesignTimePPI = 120
   Menu = MainMenu1
+  object pbMain: TPaintBox
+    Left = 0
+    Height = 674
+    Top = 170
+    Width = 794
+    Align = alClient
+  end
   object pnlTop: TPanel
     Left = 0
     Height = 170
@@ -16,133 +23,154 @@ object mainForm: TmainForm
     Align = alTop
     ClientHeight = 170
     ClientWidth = 794
+    Color = clSilver
+    ParentColor = False
     TabOrder = 0
-    object Label1: TLabel
-      Left = 20
-      Height = 20
-      Top = 10
-      Width = 92
-      Caption = 'Groote figuur:'
+    object pnlDiagNHoek: TPanel
+      Left = 1
+      Height = 168
+      Top = 1
+      Width = 792
+      Align = alClient
+      ClientHeight = 168
+      ClientWidth = 792
+      Color = clMoneyGreen
       ParentColor = False
-      Visible = False
-    end
-    object SpinEdit1: TSpinEdit
-      Left = 20
-      Height = 28
-      Top = 40
-      Width = 70
-      Increment = 10
-      MaxValue = 300
-      MinValue = 50
-      OnChange = miDiagNHoekClick
       TabOrder = 0
-      Value = 50
       Visible = False
+      object seBreed: TSpinEdit
+        Left = 20
+        Height = 28
+        Top = 40
+        Width = 70
+        Increment = 10
+        MaxValue = 300
+        MinValue = 50
+        OnChange = miDiagNHoekClick
+        TabOrder = 0
+        Value = 50
+      end
+      object seHoog: TSpinEdit
+        Left = 20
+        Height = 28
+        Top = 90
+        Width = 70
+        Increment = 10
+        MaxValue = 200
+        MinValue = 50
+        OnChange = miDiagNHoekClick
+        TabOrder = 1
+        Value = 50
+      end
+      object seHoek: TSpinEdit
+        Left = 128
+        Height = 28
+        Top = 40
+        Width = 70
+        MaxValue = 25
+        MinValue = 4
+        OnChange = miDiagNHoekClick
+        TabOrder = 2
+        Value = 4
+      end
+      object Label2: TLabel
+        Left = 128
+        Height = 20
+        Top = 8
+        Width = 128
+        Caption = 'Aantal hoekpunten:'
+        ParentColor = False
+      end
+      object Label1: TLabel
+        Left = 20
+        Height = 20
+        Top = 8
+        Width = 101
+        Caption = 'Grootte figuur: '
+        ParentColor = False
+      end
     end
-    object SpinEdit2: TSpinEdit
-      Left = 20
-      Height = 28
-      Top = 90
-      Width = 70
-      Increment = 10
-      MaxValue = 200
-      MinValue = 50
-      OnChange = miDiagNHoekClick
+    object pnlDiagWeb: TPanel
+      Left = 1
+      Height = 168
+      Top = 1
+      Width = 792
+      Align = alClient
+      ClientHeight = 168
+      ClientWidth = 792
+      Color = clSkyBlue
+      ParentColor = False
       TabOrder = 1
-      Value = 50
       Visible = False
+      object Label3: TLabel
+        Left = 16
+        Height = 20
+        Top = 16
+        Width = 141
+        Caption = 'Aantal punten boven:'
+        ParentColor = False
+      end
+      object sePunt: TSpinEdit
+        Left = 16
+        Height = 28
+        Top = 56
+        Width = 63
+        MaxValue = 20
+        MinValue = 8
+        OnChange = miDiagWebClick
+        TabOrder = 0
+        Value = 8
+      end
     end
-    object SpinEdit3: TSpinEdit
-      Left = 170
-      Height = 28
-      Top = 40
-      Width = 70
-      MaxValue = 25
-      MinValue = 4
-      OnChange = miDiagNHoekClick
+    object pnlIngeschreven: TPanel
+      Left = 1
+      Height = 168
+      Top = 1
+      Width = 792
+      Align = alClient
+      ClientHeight = 168
+      ClientWidth = 792
       TabOrder = 2
-      Value = 4
       Visible = False
+      object Label4: TLabel
+        Left = 20
+        Height = 20
+        Top = 16
+        Width = 51
+        Caption = '1<k<25'
+        ParentColor = False
+      end
+      object seK: TSpinEdit
+        Left = 20
+        Height = 28
+        Top = 56
+        Width = 62
+        MaxValue = 25
+        MinValue = 1
+        OnChange = miIngeschrevenClick
+        TabOrder = 0
+        Value = 1
+      end
+      object seN: TSpinEdit
+        Left = 136
+        Height = 28
+        Top = 56
+        Width = 63
+        MaxValue = 50
+        MinValue = 10
+        OnChange = miIngeschrevenClick
+        TabOrder = 1
+        Value = 10
+      end
+      object Label5: TLabel
+        Left = 136
+        Height = 20
+        Top = 16
+        Width = 181
+        Caption = 'Aantal Vierkanten 10<n<50'
+        ParentColor = False
+      end
     end
-    object Label2: TLabel
-      Left = 170
-      Height = 20
-      Top = 10
-      Width = 128
-      Caption = 'Aantal hoekpunten:'
-      ParentColor = False
-      Visible = False
-    end
-    object Label3: TLabel
-      Left = 170
-      Height = 20
-      Top = 90
-      Width = 141
-      Caption = 'Aantal punten boven:'
-      ParentColor = False
-      Visible = False
-    end
-    object SpinEdit4: TSpinEdit
-      Left = 360
-      Height = 28
-      Top = 88
-      Width = 70
-      MaxValue = 16
-      MinValue = 8
-      OnChange = miDiagWebClick
-      TabOrder = 3
-      Value = 8
-      Visible = False
-    end
-    object Label4: TLabel
-      Left = 360
-      Height = 20
-      Top = 10
-      Width = 51
-      Caption = '1<k<25'
-      ParentColor = False
-      Visible = False
-    end
-    object SpinEdit5: TSpinEdit
-      Left = 360
-      Height = 28
-      Top = 40
-      Width = 62
-      MaxValue = 25
-      MinValue = 1
-      OnChange = miIngeschrevenClick
-      TabOrder = 4
-      Value = 1
-      Visible = False
-    end
-    object SpinEdit6: TSpinEdit
-      Left = 448
-      Height = 28
-      Top = 39
-      Width = 63
-      MaxValue = 50
-      MinValue = 10
-      OnChange = miIngeschrevenClick
-      TabOrder = 5
-      Value = 10
-      Visible = False
-    end
-    object Label5: TLabel
-      Left = 448
-      Height = 20
-      Top = 10
-      Width = 60
-      Caption = '10<n<50'
-      ParentColor = False
-      Visible = False
-    end
-  end
-  object pbMain: TPaintBox
-    Left = 0
-    Height = 541
-    Top = 170
-    Width = 794
-    Align = alClient
   end
   object MainMenu1: TMainMenu
     Left = 258
