--- a/lib/x86_64-win64/main.lfm
+++ b/lib/x86_64-win64/main.lfm
@@ -1,16 +1,16 @@
 object mainForm: TmainForm
   Left = 342
-  Height = 785
+  Height = 824
   Top = 31
   Width = 794
   Caption = '40 grafische algoritmes'
-  ClientHeight = 785
+  ClientHeight = 824
   ClientWidth = 794
   DesignTimePPI = 120
   Menu = MainMenu1
   object pbMain: TPaintBox
     Left = 0
-    Height = 615
+    Height = 654
     Top = 170
     Width = 794
     Align = alClient
@@ -285,7 +285,7 @@ object mainForm: TmainForm
     end
   end
   object MainMenu1: TMainMenu
-    Left = 258
+    Left = 264
     Top = 60
     object MenuItem1: TMenuItem
       Caption = 'Programma 1-10'
@@ -320,6 +320,10 @@ object mainForm: TmainForm
       object miSinuskrommen: TMenuItem
         Caption = 'Sinuskrommen'
         OnClick = miSinuskrommenClick
+      end
+      object miParaboolstelsel: TMenuItem
+        Caption = 'Paraboolstelsel'
+        OnClick = miParaboolstelselClick
       end
     end
   end
