--- a/main.lfm
+++ b/main.lfm
@@ -283,10 +283,93 @@ object mainForm: TmainForm
         TabOrder = 4
       end
     end
+    object pnlWillekFunc: TPanel
+      Left = 1
+      Height = 168
+      Top = 1
+      Width = 792
+      Align = alClient
+      ClientHeight = 168
+      ClientWidth = 792
+      TabOrder = 4
+      Visible = False
+      object Label10: TLabel
+        Left = 27
+        Height = 20
+        Top = 14
+        Width = 120
+        Caption = 'Linkergrens voor x'
+        ParentColor = False
+      end
+      object Label11: TLabel
+        Left = 27
+        Height = 20
+        Top = 81
+        Width = 131
+        Caption = 'Rechtergrens voor x'
+        ParentColor = False
+      end
+      object Label12: TLabel
+        Left = 211
+        Height = 20
+        Top = 14
+        Width = 122
+        Caption = 'Bovengrens voor y'
+        ParentColor = False
+      end
+      object Label13: TLabel
+        Left = 211
+        Height = 20
+        Top = 81
+        Width = 122
+        Caption = 'Ondergrens voor y'
+        ParentColor = False
+      end
+      object seLinkergrensX: TSpinEdit
+        Left = 27
+        Height = 28
+        Top = 47
+        Width = 63
+        MinValue = -5
+        OnChange = miWillekeurigeFunctieClick
+        TabOrder = 0
+        Value = -5
+      end
+      object seRechtergrensX: TSpinEdit
+        Left = 27
+        Height = 28
+        Top = 118
+        Width = 63
+        MaxValue = 5
+        OnChange = miWillekeurigeFunctieClick
+        TabOrder = 1
+        Value = 5
+      end
+      object seBovengrensY: TSpinEdit
+        Left = 211
+        Height = 28
+        Top = 47
+        Width = 63
+        MaxValue = 10
+        OnChange = miWillekeurigeFunctieClick
+        TabOrder = 2
+        Value = 10
+      end
+      object seOndergrensY: TSpinEdit
+        Left = 211
+        Height = 28
+        Top = 120
+        Width = 63
+        MinValue = -10
+        OnChange = miWillekeurigeFunctieClick
+        TabOrder = 3
+        Value = -10
+      end
+    end
   end
   object MainMenu1: TMainMenu
-    Left = 264
-    Top = 60
+    Left = 416
+    Top = 56
     object MenuItem1: TMenuItem
       Caption = 'Programma 1-10'
       object miDiagWeb: TMenuItem
@@ -328,6 +411,13 @@ object mainForm: TmainForm
       object miOppKromme: TMenuItem
         Caption = 'Oppervlakte onder kromme'
         OnClick = miOppKrommeClick
+      end
+    end
+    object MenuItem2: TMenuItem
+      Caption = 'Programma 11-20'
+      object miWillekeurigeFunctie: TMenuItem
+        Caption = 'Willekeurige Functie'
+        OnClick = miWillekeurigeFunctieClick
       end
     end
   end
